# qr-control

./: .gitignore  CMakeLists.txt  Config.cpp  Config.h  Logger.cpp  Logger.h  Makefile  QRDetector.cpp  QRDetector.h  README.md  Request.cpp  Request.h  Response.cpp  Response.h  config.json.dist  go  main.cpp
image_formats/: JPEG.cpp  JPEG.h  jpeg_with_exception.cpp  jpeg_with_exception.h
log_handlers/: ConsoleHandler.cpp  ConsoleHandler.h  FileHandler.cpp  FileHandler.h  LogHandler.cpp  LogHandler.h
